--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	"activationEvents": [
 		"onLanguage:svg"
 	],
-	"main": "./dist/extension.js",
+	"main": "./extension.js",
 	"contributes": {
 		"customEditors": [
 			{
